# toe1.02

./: .gitignore  DECISIONS.md  LICENSE  README.md  diagnose.py  drums.py  evaluate.py  main.py  pyproject.toml  quantize.py  render.py  train_cnn.py  transcribe.py
output/: drum_cnn.pt  eval.txt  measurements.txt
output/diagnostic/baseline/: diagnosis_report.md
output/diagnostic/new_hop_size_and_tol_window/: diagnosis_report.md  diagnostic.txt  evaluation.txt
